# model-ara

./: .gitignore  PROJECT_PRESENTATION.md  README.md  app.py  feature_extractor.joblib  main.py  pyproject.toml  training_dashboard.py
.kiro/steering/: product.md  structure.md  tech.md
alg-dialct/: Cargo.toml  PROJECT_PRESENTATION.md
alg-dialct/src/: main.rs
cleainging-data/: COMPARISON.md  Cargo.toml  DOCUMENTATION.md  PRESENTATION.md  main.py
cleainging-data/src/: error.rs  io.rs  main.rs  processing.rs  record.rs
darija-convert/: Cargo.toml  PROJECT_DOCUMENTATION.md
darija-convert/src/: main.rs
saved_models/20251202_154734_Random_Forest_f1_0.9992/: metadata.json
saved_models/20251202_155109_Linear_SVM_f1_0.9967/: metadata.json
saved_models/20251202_155439_Logistic_Regression_f1_0.9958/: metadata.json
saved_models/20251202_170914_Logistic_Regression_f1_0.9831/: metadata.json
saved_models/20251202_171429_Random_Forest_f1_0.9965/: metadata.json
saved_models/20251202_175128_Logistic_Regression_f1_0.9831/: metadata.json
saved_models/20251202_183313_Logistic_Regression_f1_0.9775/: metadata.json
saved_models/20251202_192044_Logistic_Regression_f1_0.9854/: metadata.json
saved_models/20251202_192658_Random_Forest_f1_0.9971/: metadata.json
src/: __init__.py
src/feature_extraction/: __init__.py  farasa_extractor.py  farasa_segment_printer.py  feature_extractor.py  linguistic_extractor.py  sentiment_extractor.py  tfidf_extractor.py  visualization.py
src/model_training/: __init__.py  (+3 more)
tests/: test_feature_extractor.py  test_manual_verification.py
(+27 files in other folders)
