[project]
name = "model-ara"
version = "0.1.0"
description = "Arabic fake news classification using feature extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "textblob>=0.17.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "imbalanced-learn>=0.11.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "farasapy>=0.0.14",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]
